syntax = "proto3";

option csharp_namespace = "Ordering.Inventory.Protos";

import "Protos/InventoryProtos/Models.proto";

service InventoryService {
	rpc CheckQuantity (CheckReq) returns (CheckRes);
}